# simplebot2

./: .gitignore  README.md  serial_plotter.py  urdf_used_by_rviz.urdf
docker_workspace/: .ps4-buttonPress.py.swp  99-usb-serial.rules  Dockerfile  Dockerfile_roarm  ps4-buttonPress.py  requirements.txt  ros-entrypoint.sh  ros2_nav2_run.sh  ros2_nav2_wo_amcl_run.sh  ros2_run.sh  ros2_slam_run.sh  run.sh  service_run.sh
motor/: CMakeCache.txt
motor/simplebot/: CMakeLists.txt  serial_test.cmake  simplebot.cmake  simplebot.cpp
onshape/: .env
onshape/onshape_env/: pyvenv.cfg
onshape/simplebot2/: config.json  robot.urdf  simplebot_description.xacro.urdf
onshape/simplebot2/assets/: a010.part  a010.stl  a010_bracket.part  a010_bracket.stl  bottom_bracket.part  frame1.part  frame2.part  frame3.part  frame4.part  motor_bracket_front_left.part  motor_bracket_front_right.part  motor_bracket_rear_left.part  motor_bracket_rear_right.part  motor_front_left.part  motor_front_right.part  motor_rear_left.part  motor_rear_right.part  part_1.part  part_10.part  part_1__2.part  part_1__3.part  part_22.part  part_27.part  part_33.part  rplidar_c1.part  side_bracket_left.part  side_bracket_right.part  top_parts_bracket.part
openvino/: pyvenv.cfg
pico_workspace/pimoroni-pico/: CMakeLists.txt
pico_workspace/pimoroni-pico/motor/: CMakeCache.txt  CMakeLists.txt
ros2_workspace/: Dockerfile  commands2remember  debug_file.txt  moveit_test.py  ros-entrypoint.sh  run.sh  run_joy.sh
ros2_workspace/config/: ekf.yaml  ekf2.yaml  mapper_params_online_async.yaml  nav2_params.yaml
ros2_workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_workspace/launch/: bot_launch.py  bot_launch_legacy.py  main_launch.py  mapper_params_online_async.yaml  nav2_bringup.py  nav2_bringup_launch.py  online_async_launch.py  robot_control_launch.py
ros2_workspace/log/: latest_build  latest_test
ros2_workspace/ros2_bagtools/: bag2csv.py  cmd_vel.csv  encoder_data.csv  joy.csv
ros2_workspace/src/: ekf.yaml
ros2_workspace/src/camera_package/: CMakeLists.txt  package.xml
ros2_workspace/src/camera_package/calibration_files/: calibration.ini  left_calibration.ini  left_calibration.yaml  right_calibration.ini  right_calibration.yaml
ros2_workspace/src/camera_package/launch/: camera_launch.py
ros2_workspace/src/camera_package/scripts/: camera_publisher_python.py
ros2_workspace/src/camera_package/src/: camera_compressed_publisher.cpp  camera_publisher.cpp
ros2_workspace/src/motor_controller/: CMakelists.txt  package.xml  setup.py
ros2_workspace/src/motor_controller/motor_controller/: kinematics2serial.py  send_cmd_vel.py
ros2_workspace/src/motor_controller2/: CMakeLists.txt  package.xml
ros2_workspace/src/motor_controller2/launch/: robot_control_launch.py
ros2_workspace/src/motor_controller2/scripts/: kinematics2serial.py  odom.py
ros2_workspace/src/motor_controller2/src/: joy2cmdvel.cpp
ros2_workspace/src/roarm_m1_client/: CMakeLists.txt  package.xml
ros2_workspace/src/roarm_m1_client/scripts/: m1_client.py
ros2_workspace/src/roarm_ws/src/roarm_main/roarm_moveit_servo/: CMakeLists.txt
ros2_workspace/src/roarm_ws/src/roarm_main/roarm_moveit_servo/launch/: servo_control.launch.py
ros2_workspace/src/roarm_ws/src/roarm_main/roarm_moveit_servo/scripts/: joystickcontrol.py
ros2_workspace/src/roarm_ws/src/roarm_main/roarm_moveit_servo/src/: joystickcontrol.cpp
ros2_workspace/src/simplebot_description/: CMakeLists.txt  package.xml  setup.py
ros2_workspace/src/simplebot_description/config/: ros2_controllers.yaml  ros2_controllers_template.yaml
ros2_workspace/src/simplebot_description/launch/: display.launch.py  load_ros2_controllers.launch.py  robot_state_publisher.launch.py  simplebot_bringup.launch.py
ros2_workspace/src/simplebot_description/meshes/: base_link.part  frame1.part  frame2.part  frame3.part  frame4.part  front_left.part  front_left.stl  front_right.part  front_right.stl  motor_bracket_front_left.part  motor_bracket_front_right.part  motor_bracket_rear_left.part  motor_bracket_rear_right.part  motor_front_left.part  motor_front_right.part  motor_rear_left.part  motor_rear_right.part  motor_rear_right.stl  part_1.part  part_10.part  part_10.stl  part_1__2.part  part_1__2.stl  part_1__3.part  part_22.part  part_27.part  part_33.part  rear_left.part  side_bracket_left.part  side_bracket_right.part
ros2_workspace/src/simplebot_description/meshes/simplebot/: part_10.part  part_1__3.stl
ros2_workspace/src/simplebot_description/meshes/test/simplebot/: a010.part  a010_bracket.part  frame4.part  frame4.stl  top_parts_bracket.part
ros2_workspace/src/simplebot_description/simplebot_description/: mecanum_joint_state_publisher.py
ros2_workspace/src/simplebot_description/src/description/: combined_description.xacro  config.json  frame2.stl  rear_right.part  robot.urdf  simplebot_description.urdf  simplebot_description.xacro
ros2_workspace/src/simplebot_description/src/description/old/: simplebot_description.urdf
ros2_workspace/src/simplebot_description/urdf/: drive.xacro  gazebo.xacro  parts.xacro  simplebot_description.urdf  simplebot_description.xacro  simplebot_description_test.xacro  wheel.xacro
ros2_workspace/src/simplebot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro
ros2_workspace/src/simplebot_description/urdf/robots/: simplebot.urdf.xacro  simplebot_description.urdf.xacro
ros2_workspace/src/simplebot_description/urdf_myown/: gazebo.xacro  parts.xacro  repomix-output.xml  simplebot_description.urdf.xacro
ros2_workspace/src/simplebot_simulation/: CMakeLists.txt  package.xml
ros2_workspace/src/simplebot_simulation/config/: ros_gz_bridge.yaml
ros2_workspace/src/simplebot_simulation/launch/: gazebo_sim.launch.py  yahboom_rosmaster.gazebo.launch.py
ros2_workspace/src/simplebot_simulation/rviz/: yahboom_rosmaster_gazebo_sim.rviz
ros2_workspace/src/simplebot_simulation/worlds/: empty.world
ros2_workspace/subset/: metadata.yaml  subset_0.db3
rp2040-motor/: control.py  motorLib.py
(+125 files in other folders)
